<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/txtCheckout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CheckOut"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:id="@+id/lblInstraction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/checkoutInstruction"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/YourOrder"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <LinearLayout
                android:id="@+id/llOrder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/txtOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="order"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Small" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/CustInfo"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fName" />

                    <TextView
                        android:id="@+id/txtFName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Small" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lName" />

                    <TextView
                        android:id="@+id/txtLName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Small" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address" />

                    <TextView
                        android:id="@+id/txtAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Small" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/postalCode" />

                    <TextView
                        android:id="@+id/txtPostalCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Small" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/creditCard" />

                    <TextView
                        android:id="@+id/txtCreditNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="text"
                        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Small" />
                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1" />

            <TextView
                android:id="@+id/txtCuisine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Small" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2" />

            <TextView
                android:id="@+id/txtRestaurant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Small" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@color/colorButton"
                    android:onClick="onClickConfirm"
                    android:text="@string/btnConfirm" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>