<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:id="@+id/txtRestaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Restaurant"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_toRightOf="@id/txtCategory"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/lblInstraction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/restaurantInstruction"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/colorButton"
            android:onClick="onClickNext"
            android:text="@string/btnNext" />

    </RelativeLayout>
</LinearLayout>
